<resources>
    <string name="app_name">ArmW</string>
    <string name="jan">JAN</string>
    <string name="_01">01</string>
    <string name="login">Prisijungti</string>
    <string name="register">Registruotis</string>
    <string name="you_need_to_log_in">Prisijunkite arba prisiregistruokite, kad galėtumėt matyti savo informaciją</string>
    <string name="title_activity_login">Prisijungimas</string>
    <string name="prompt_email">El.paštas</string>
    <string name="prompt_password">Slaptažodis</string>
    <string name="action_sign_in">P</string>
    <string name="action_sign_in_short">Prisijungti</string>
    <string name="welcome">"Sveiki, "</string>
    <string name="invalid_username">Neteisingi prisijungimo duomenys</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Prisijungimas nepavyko"</string>
    <string name="sign_in">Prisijungti</string>
    <string name="name">Vardas</string>
    <string name="input_your_name">Įveskite savo vardą</string>
    <string name="surname">Pavardė</string>
    <string name="input_your_surname">Įveskite savo pavardę</string>
    <string name="input_your_age">Iveskite savo amžių</string>
    <string name="input_your_email">Įveskite savo el. paštą</string>
    <string name="password">Slaptažodis</string>
    <string name="input_your_password">Įveskite savo slaptažodį</string>
    <string name="title_activity_tournament_details">Varžybų informacija</string>
    <string name="hello">Sveiki</string>
    <string name="name_hint">Įveskite savo vardą</string>
    <string name="email">el. paštas</string>
    <string name="email_hint">Įveskite savo el. paštą</string>
    <string name="cancel">Atsijungti</string>
    <string name="save">Išsaugoti</string>
    <string name="varzybos">Varžybos</string>
    <string name="dabartinis">Dabartinis</string>
    <string name="paskyra">Paskyra</string>
    <string name="amzius">Amžius</string>
    <string name="moteris">Moteris</string>
    <string name="vyras">Vyras</string>
    <string name="eil">Lenkimo eilė</string>
    <string name="control_tournament">Nustatymai</string>
    <string name="pozicijos">Pozicijos</string>
    <string name="valdymas">Valdymas</string>
    <string name="hello_blank_fragment">Privalote pasirinkti varžybas</string>
    <string name="pavadinimas">Pavadinimas</string>
    <string name="data">Data</string>
    <string name="pradzia">Pradzia</string>
    <string name="pabaiga">Pabaiga</string>
    <string name="lokacija">Lokacija</string>
    <string name="stalu_sk">Lenkimo stalų skaičius</string>
    <string name="aprasas">Aprašas</string>
    <string name="next">Sukurti turnyrą</string>
    <string name="lytis">Lytis</string>
    <string name="male">Moteris</string>
    <string name="female">Vyras</string>
    <string name="tournament_image">image_text</string>
    <string name="currently_registering">Galima registracija</string>
    <string name="currently_in_progress">Šiuo metu vyksta</string>
    <string name="has_ended">Pasibaigė</string>
    <string name="perziureti">Peržiūrėti</string>
    <string name="iveskite_turnyro_pradzia">Įveskite turnyro pradžią</string>
    <string name="iveskite_pabaigimo_laika">Įveskite pabaigimo laiką</string>
    <string name="kelti_nuotrauk">Įkelti nuotrauką</string>
    <string name="atsijungti">Atsijungti</string>
    <string name="ankstesni">Buvusios varžybos</string>
    <string name="kategorijos">Kategorijos</string>
    <string name="title_activity_bracket">BracketActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="not_started">Neužbaigta pildyti</string>
    <string-array name="foul_types">
        <item>Ranka</item>
        <item>Alkūnė</item>
        <item>Klaidingas startas</item>
    </string-array>
    <string name="privacy_policy">Privatumo politika

Ši privatumo politika (toliau - „politika“) reglamentuoja asmens duomenų rinkimą, naudojimą, saugojimą ir apsaugą, kai jūs (toliau - „vartotojas“) naudojatės http://armw.com interneto svetaine (toliau - „svetainė“) ir jos teikiamomis paslaugomis.
1. Asmens duomenų rinkimas ir tvarkymas

1.1. Renkame asmeninius duomenis, kuriuos jūs savo pasirinkimu pateikiate aplikacijoje, kaip prisijungimus.
2. Asmens duomenų saugojimas ir apsauga

2.1. Mes įsipareigojame užtikrinti asmens duomenų konfidencialumą ir jų saugumą, taikydami tinkamas technines ir organizacines priemones, kad būtų apsaugoti nuo neteisėto ar netinkamo naudojimo, praradimo, sunaikinimo ar pažeidimo.
2.2. Mes saugosime jūsų asmens duomenis tiek, kiek tai būtina siekiant vykdyti mūsų teisinius įsipareigojimus arba vykdyti mūsų verslo interesus.
2.3. Galite apsilankyti mūsų svetainėje, nesuteikdami jokios informacijos, kuria būtų galima identifikuoti jūsų asmens tapatybę. Tačiau, jeigu norėsite pasinaudoti mūsų svetainės funkcijomis, norėsite gauti mūsų naujienlaiškį arba užpildysite mūsų kontaktinę formą, tuomet taip galite suteikti mums savo asmeninių duomenų: el. pašto adresą, vardą, pavardę. Turite pasirinkimą nesuteikti mums savo asmeninių duomenų, tačiau tokiu atveju negalėsite naudotis dauguma svetainės teikiamų funkcijų. Svetainės lankytojai, nežinantys, kokią informaciją privalome rinkti, gali susisiekti su mumis el. paštu: rytis.armw@gmail.com.

3. Duomenų gavimas iš trečiųjų šalių

3.1. Jūsų asmens duomenis perduodame tik patikimoms trečiosioms šalims ir tik siekdami tinkamai įgyvendinti asmens duomenų tvarkymo tikslus. Taip pat, galime perduoti jūsų asmens duomenis, kai to reikalauja galiojantys teisiniai įstatymai arba kai tai būtina mūsų paslaugų teikimui.

4.1. Mūsų svetainė gali naudoti slapukus ir kitas sekimo technologijas, kad pagerintų jūsų naudojimosi patirtį ir analizuotų srautą.
5.2. Mes nesusiejame lankytojo IP adreso ir elektroninio pašto adreso ar kitos asmeninės informacijos su duomenimis, kurie leidžia identifikuoti lankytoją. Tai reiškia, kad kiekvieno lankytojo apsilankymo sesija bus užregistruota, tačiau svetainės lankytojas išliks anonimiškas.
6. Jūsų teisės

6.1. Jūs turite teisę susipažinti su asmens duomenimis, kurie yra apie jus renkami ir tvarkomi, taip pat prašyti šių duomenų pataisymo, ištrinimo arba perkėlimo į kitą organizaciją. Taip pat jūs turite teisę prieštarauti duomenų tvarkymui.
7. Kontaktai

7.1. Jeigu turite klausimų ar pageidaujate gauti daugiau informacijos apie mūsų privatumo politiką, prašome susisiekti su mumis el. paštu: rytis.armw@gmail.com. </string>
</resources>