<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pavadinimas" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data" />

    <EditText
        android:id="@+id/startEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pradzia" />

    <EditText
        android:id="@+id/endEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pabaiga" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lokacija" />

    <EditText
        android:id="@+id/tablesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stalu_sk" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aprasas" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>