<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account_settings.AccoutAfterAuth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Name Field -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Email Field -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amzius"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextamzius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_age"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lytis"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioVyr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vyras" />

            <RadioButton
                android:id="@+id/radioMot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moteris" />
        </RadioGroup>


            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/ankstesni"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recycle_was"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                tools:listitem="@layout/fragment_tournament_model" />
        </LinearLayout>
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</ScrollView>